{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 227,
  "lineage": "0e9e6882-bf8d-7dc9-ea08-f6089c703675",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "mongodb_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:vpc/vpc-0828a5cb74c8482ff",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0906f490556126c89",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0cc639bb95aba37c2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0828a5cb74c8482ff",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01b2a64e3f32276a2",
            "owner_id": "442042553076",
            "tags": {
              "Name": "mongo_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069824037e2878bdc",
            "arn": "arn:aws:ec2:us-east-1:442042553076:elastic-ip/eipalloc-069824037e2878bdc",
            "domain": "vpc",
            "id": "eipalloc-069824037e2878bdc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-230-157-87.compute-1.amazonaws.com",
            "public_ip": "3.230.157.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tasky-nat-eip"
            },
            "tags_all": {
              "Name": "tasky-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:internet-gateway/igw-027ecad5528faa2ea",
            "id": "igw-027ecad5528faa2ea",
            "owner_id": "442042553076",
            "tags": {
              "Name": "tasky-igw"
            },
            "tags_all": {
              "Name": "tasky-igw"
            },
            "vpc_id": "vpc-01f4fb38594d2d491"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069824037e2878bdc",
            "association_id": "eipassoc-05ff937c82039f162",
            "connectivity_type": "public",
            "id": "nat-0d201a3ac4d21aeb1",
            "network_interface_id": "eni-07f217acdd1552e6f",
            "private_ip": "10.0.1.242",
            "public_ip": "3.230.157.87",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c58d7c69d56bc53f",
            "tags": {
              "Name": "tasky-nat-gateway"
            },
            "tags_all": {
              "Name": "tasky-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.new_vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "eks_to_mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "192.168.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d8efb6cb559a760a3901788224",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d8efb6cb559a760a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-003bc1ecafc157403"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_vpc.new_vpc",
            "aws_vpc_peering_connection.eks_to_mongodb",
            "data.aws_vpc.mongodb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "mongodb_to_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0756141ea9031ba60179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0756141ea9031ba60",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-003bc1ecafc157403"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "aws_vpc_peering_connection.eks_to_mongodb",
            "data.aws_route_tables.mongodb_private",
            "data.aws_vpc.mongodb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0257a0772d4131b19179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0257a0772d4131b19",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-003bc1ecafc157403"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "aws_vpc_peering_connection.eks_to_mongodb",
            "data.aws_route_tables.mongodb_private",
            "data.aws_vpc.mongodb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d8efb6cb559a760a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d201a3ac4d21aeb1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d8efb6cb559a760a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.new_vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-027ecad5528faa2ea",
            "id": "r-rtb-0452258e6ef3fbbb91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0452258e6ef3fbbb9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:route-table/rtb-0d8efb6cb559a760a",
            "id": "rtb-0d8efb6cb559a760a",
            "owner_id": "442042553076",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tasky-private-rt"
            },
            "tags_all": {
              "Name": "tasky-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f4fb38594d2d491"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:route-table/rtb-0452258e6ef3fbbb9",
            "id": "rtb-0452258e6ef3fbbb9",
            "owner_id": "442042553076",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tasky-public-rt"
            },
            "tags_all": {
              "Name": "tasky-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f4fb38594d2d491"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1d8c5549c18b216",
            "route_table_id": "rtb-0d8efb6cb559a760a",
            "subnet_id": "subnet-0413a75e69d4a5d25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1",
            "aws_vpc.new_vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fd740cf8c045bd6",
            "route_table_id": "rtb-0d8efb6cb559a760a",
            "subnet_id": "subnet-04006d6a75ed26c6e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_2",
            "aws_vpc.new_vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e21e051d36b62026",
            "route_table_id": "rtb-0452258e6ef3fbbb9",
            "subnet_id": "subnet-0c58d7c69d56bc53f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.new_vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:subnet/subnet-0413a75e69d4a5d25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0413a75e69d4a5d25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442042553076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tasky-private-subnet-1",
              "kubernetes.io/cluster/tasky-eks-gF4aG3Ae": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "tasky-private-subnet-1",
              "kubernetes.io/cluster/tasky-eks-gF4aG3Ae": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01f4fb38594d2d491"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:subnet/subnet-04006d6a75ed26c6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04006d6a75ed26c6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442042553076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tasky-private-subnet-2",
              "kubernetes.io/cluster/tasky-eks-gF4aG3Ae": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "tasky-private-subnet-2",
              "kubernetes.io/cluster/tasky-eks-gF4aG3Ae": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01f4fb38594d2d491"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:subnet/subnet-0c58d7c69d56bc53f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c58d7c69d56bc53f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442042553076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tasky-public-subnet",
              "kubernetes.io/cluster/tasky-eks-gF4aG3Ae": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "tasky-public-subnet",
              "kubernetes.io/cluster/tasky-eks-gF4aG3Ae": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01f4fb38594d2d491"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:vpc/vpc-01f4fb38594d2d491",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0583c20d3d895d2d4",
            "default_route_table_id": "rtb-0eb1ed2172e8861c5",
            "default_security_group_id": "sg-0572c71d9e62bfe32",
            "dhcp_options_id": "dopt-0cc639bb95aba37c2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f4fb38594d2d491",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb1ed2172e8861c5",
            "owner_id": "442042553076",
            "tags": {
              "Name": "tasky-eks-vpc"
            },
            "tags_all": {
              "Name": "tasky-eks-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "eks_to_mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "auto_accept": true,
            "id": "pcx-003bc1ecafc157403",
            "peer_owner_id": "442042553076",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0828a5cb74c8482ff",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "EKS-to-MongoDB-Peering"
            },
            "tags_all": {
              "Name": "EKS-to-MongoDB-Peering"
            },
            "vpc_id": "vpc-01f4fb38594d2d491"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "data.aws_vpc.mongodb_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:security-group/sg-0561954dc69b33cbd",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0561954dc69b33cbd",
            "ingress": [],
            "name": "tasky-eks-gF4aG3Ae-cluster-20250813142418449900000007",
            "name_prefix": "tasky-eks-gF4aG3Ae-cluster-",
            "owner_id": "442042553076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "tasky-eks-gF4aG3Ae-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tasky-eks-gF4aG3Ae-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f4fb38594d2d491"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:security-group/sg-0e72f9dd1df0ded09",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0e72f9dd1df0ded09",
            "ingress": [],
            "name": "tasky-eks-gF4aG3Ae-node-20250813142418449900000006",
            "name_prefix": "tasky-eks-gF4aG3Ae-node-",
            "owner_id": "442042553076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "tasky-eks-gF4aG3Ae-node",
              "Terraform": "true",
              "kubernetes.io/cluster/tasky-eks-gF4aG3Ae": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tasky-eks-gF4aG3Ae-node",
              "Terraform": "true",
              "kubernetes.io/cluster/tasky-eks-gF4aG3Ae": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f4fb38594d2d491"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3401622041",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0561954dc69b33cbd",
            "security_group_rule_id": "sgr-0b2e01069fbdf8403",
            "self": false,
            "source_security_group_id": "sg-0e72f9dd1df0ded09",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3578763635",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e72f9dd1df0ded09",
            "security_group_rule_id": "sgr-0e1ba575c24e3a1ee",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2979514981",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e72f9dd1df0ded09",
            "security_group_rule_id": "sgr-055402a7c6232c94b",
            "self": false,
            "source_security_group_id": "sg-0561954dc69b33cbd",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-567964305",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e72f9dd1df0ded09",
            "security_group_rule_id": "sgr-0716c361a95081f99",
            "self": false,
            "source_security_group_id": "sg-0561954dc69b33cbd",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3902280967",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e72f9dd1df0ded09",
            "security_group_rule_id": "sgr-007fbce7d8f3d7c06",
            "self": false,
            "source_security_group_id": "sg-0561954dc69b33cbd",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-4223936806",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e72f9dd1df0ded09",
            "security_group_rule_id": "sgr-0f852849344c0db85",
            "self": false,
            "source_security_group_id": "sg-0561954dc69b33cbd",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2674203373",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e72f9dd1df0ded09",
            "security_group_rule_id": "sgr-023b625b1be8492a3",
            "self": false,
            "source_security_group_id": "sg-0561954dc69b33cbd",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-802564693",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e72f9dd1df0ded09",
            "security_group_rule_id": "sgr-0dd8035f9b137b541",
            "self": false,
            "source_security_group_id": "sg-0561954dc69b33cbd",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1371376893",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e72f9dd1df0ded09",
            "security_group_rule_id": "sgr-0026976ac0ea2f925",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2159875394",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e72f9dd1df0ded09",
            "security_group_rule_id": "sgr-0e5fc83fa79bee86b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-618837677",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0e72f9dd1df0ded09",
            "security_group_rule_id": "sgr-01245441b3c7421b4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}